# bluetooth-audio-boost

./: .gitignore  CONTRIBUTING.md  FLATPAK.md  LAUNCH_COPY.md  MANIFEST.in  README.md  RELEASE_NOTES.md  com.github.ezrakhuzadi.BluetoothBitrateManager.flatpakref  flake.nix  install.sh  pyproject.toml
.github/workflows/: flatpak.yml
bluetooth_bitrate_manager/: __init__.py  bitrate_utils.py  gui.py  monitor.py
bluetooth_bitrate_manager/resources/: bluetooth-bitrate-manager.desktop  build_high_bitpool.sh  pipewire-sbc-custom-bitpool.patch
packaging/flatpak/: com.github.ezrakhuzadi.BluetoothBitrateManager.desktop  com.github.ezrakhuzadi.BluetoothBitrateManager.metainfo.xml
